...
    },
    "Add images": {},
    "Add images (drag & drop or click)": {
      "comment": "A tooltip for the \"Add\" button in the image gallery toolbar.",
      "isCommentAutoGenerated": true
    },
    "Add Item": {
      "comment": "A button label that says \"Add Item\" with an \"plus\" icon.",
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
...
            "state": "translated",
            "value": "Lisää tuotteita iPhonellasi"
          }
        }
      }
    },
    "Add List": {
      "comment": "A button label that says \"Add List\".",
      "isCommentAutoGenerated": true
    },
    "Add more items to continue": {},
    "Add new item": {
      "comment": "A button that allows the user to add a new item to a list.",
...
            "state": "translated",
            "value": "Oletusjärjestys"
          }
        }
      }
    },
    "Delete": {
      "comment": "Two buttons, \"Delete\" and \"Cancel\", in an alert. \"Delete\" triggers a deletion action, while \"Cancel\" dismisses the alert.",
      "extractionState": "manual",
      "isCommentAutoGenerated": true,
      "localizations": {
        "en": {
          "stringUnit": {
...
            "state": "translated",
            "value": "Oikeaklikkaa tuotteita pikatoimintoihin kuten poista ja monista"
          }
        }
      }
    },
    "Save": {
      "comment": "The label of a button that saves changes to a list.",
      "extractionState": "manual",
      "isCommentAutoGenerated": true,
      "localizations": {
        "en": {
          "stringUnit": {
...
    "Select Multiple Items": {},
    "Select Multiple Lists": {},
    "selected": {},
    "Selected": {},
    "Selection actions": {},
    "Selection actions menu": {},
    "Settings": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
...
